Allow more flexibility with UI layout

--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ TOP SUB =1
  BU TOP
 DONE PRINT X
  END </textarea>
-<button>Run</button>
+<button id="runbutton">Run</button>
 <script src="code.js"></script>
