Add backwards base 2 (@DissmoBob)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         If you choose to omit LABEL or LOC, still write the spaces, but leave the argument blank.
     </p>
 </center>
-Sample programs: <button class="samplecode">Factorial</button>
+Sample programs: <button class="samplecode">Factorial</button> <button class="samplecode">Base 2, backwards</button>
 <br />
 <textarea rows="15">TEMP DC 0
 A DC 8
